# 3D-Asteroids

./: .gitignore  Asteroid.cpp  Asteroid.h  CMakeLists.txt  Debris.cpp  Debris.h  HUD.h  List.h  Makefile  Particles.cpp  Particles.h  Player.cpp  Player.h  Polygon.cpp  Polygon.h  Random.cpp  Random.h  Shooter.cpp  Shooter.h  Shrek.txt  Skybox.cpp  Skybox.h  application  asteroid1.txt  asteroids.vcxproj  asteroids.vcxproj.filters  convexhull.cpp  convexhull.h  framebuffer.cpp  framebuffer.h  glowVert.shader  greatdodeca.txt  gyroelongated.txt  loadOBJ.cpp  loadOBJ.h  loadshaders.cpp  loadshaders.h  lowpolyship.txt  main.cpp  matrix.cpp  (+10 more)
Debug/: vc141.idb
Debug/asteroids.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  asteroids.lastbuildstate  asteroids.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/asteroids.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  asteroids.lastbuildstate  asteroids.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
headers/: HUD.h  convexhull.h  particles.h  player.h  random.h  vertexarrays.h
include/: framebuffer.h  shooter.h  skybox.h
objects/: ship.txt  ship2.txt  triaugtriprism.txt
shaders/: polygonFrag.shader  polygonGeom.shader  polygonVert.shader  screenVert.shader  shotVert.shader
shaders/glow/: frag.glsl
shaders/particles/: vert.glsl
src/: asteroid.cpp  asteroid.h  convexhull.cpp  framebuffer.cpp  loadshaders.h  main.cpp  particles.cpp  player.cpp  polygon.cpp  polygon.h  random.cpp  shooter.cpp  skybox.cpp  vertexarrays.cpp
(+6 files in other folders)
